# Practice

./: .gitignore
books/: README.md
books/C++20/: Makefile  main.cc
books/boost-mpl/: 2.hpp  3.hpp  4.hpp  CMakeLists.txt  main.cc
books/concurrency/chapter_1/: main.cc
books/concurrency/chapter_2/: Makefile  main.cc
books/concurrency/chapter_3/: main.cc
books/concurrency/chapter_4/: Makefile  main.cc
c++/: .gitignore  README.md
c++/src/automake/: README.md
c++/src/automake/basis/: Makefile.am  README.md  autogen.sh
c++/src/automake/basis/src/: Makefile.am
c++/src/automake/internationalization/: README.md  configure.ac
c++/src/automake/internationalization/po/: LINGUAS  en_US.po  zh_CN.po
c++/src/boost/asio/io_context/: README.md
c++/src/boost/asio/signal/: CMakeLists.txt  README.md  main.cc
c++/src/boost/asio/threadpool/: README.md  main.cc
c++/src/boost/log/: README.md  main.cc
c++/src/boost/program_options/: CMakeLists.txt  character.properties  main.cc
c++/src/glib/: README.md
c++/src/glib/class/: CMakeLists.txt  README.md  bird.c  main.c
c++/src/glib/notify/: CMakeLists.txt  README.md  bird.h
c++/src/glib/signal/: CMakeLists.txt  README.md  bird.c  bird.h  main.c
c++/src/gtk/menu/popup/: CMakeLists.txt  main.c
c++/src/jsoncpp/: CMakeLists.txt  README.md  main.cc
c++/src/libvirt/dumpxml/: main.cc
c++/src/muduo/: README.md
c++/src/muduo/chat/: CMakeLists.txt  README.md  chat.cc  chat.h  client.cc  codec.h  main.cc
c++/src/muduo/echo/: CMakeLists.txt  README.md  echo.cc  echo.h  main.cc
c++/src/odb/: README.md
c++/src/odb/basic/: README.md  person.hxx
c++/src/poco/: README.md
c++/src/poco/application/: Connection.cc  GameServer.cc  main.cc
c++/src/poco/byteorder/: CMakeLists.txt  README.md  main.cc
c++/src/poco/config/: README.md  config.properties
c++/src/poco/logger/: README.md  log.properties
c++/src/poco/thread/: README.md
c++/src/poco/type/: CMakeLists.txt
c++/src/pugixml/: README.md
c++/src/rabbitmq/publishsubscribe/: README.md
c++/src/rabbitmq/routing/: producer.cc
c++/src/rabbitmq/rpc/: README.md  producer.cc
c++/src/rabbitmq/workqueues/: consumer.cc
c++/src/soci/async/: README.md  main.cc
c++/src/soci/basic/: README.md
c++/src/soci/pool/: CMakeLists.txt
c++/src/soci/statements/: main.cc
c++/src/std/: README.md
c++/src/std/cin/: CMakeLists.txt  README.md  main.cc
c++/src/std/fstream/: .gitignore  README.md
c++/src/std/getopt_long/: README.md
c++/src/unix/epoll/: CMakeLists.txt  README.md
c++/src/unix/system/: CMakeLists.txt
c++/src/unix/system/include/: curr_time.h  error_functions.h  get_num.h  itimerspec_from_str.h  signal_functions.h  tlpi_hdr.h
c++/src/unix/system/src/: curr_time.c  error_functions.c  get_num.c  itimerspec_from_str.c  signal_functions.c
c++/src/unix/system/test/: CMakeLists.txt
c++/src/unix/system/test/filebuff/: direct_read.cpp
c++/src/unix/system/test/filelock/: create_pid_file.cpp
c++/src/unix/system/test/inotify/: demo_inotify.cpp
c++/src/unix/system/test/mmap/: anon_mmap.cpp  t_mmap.cpp
c++/src/unix/system/test/psem/: CMakeLists.txt  psem_create.cpp  psem_post.cpp  psem_unlink.cpp  psem_wait.cpp  thread_incr_psem.cpp
c++/src/unix/system/test/pshm/: README.md  Untitled  pshm_create.cpp  pshm_read.cpp  pshm_spmc.cpp  pshm_unlink.cpp  pshm_write.cpp
c++/src/unix/system/test/signals/: README.md  catch_rtsigs.cpp  sig_receiver.cpp  sig_sender.cpp  signalfd_sigval.cpp  t_kill.cpp  t_sigqueue.cpp  t_sigsuspend.cpp  t_sigwaitinfo.cpp
c++/src/unix/system/test/threads/: strerror_tsd.cpp  thread_cancel.cpp  thread_cleanup.cpp
c++/src/unix/system/test/timers/: demo_timerfd.cpp  ptmr_sigev_signal.cpp
python/src/asyncio/: README.md
python/src/asyncio/collect/: README.md  as_completed.py  gather.py  wait.py
python/src/asyncio/concurrency/: README.md  thread.py
python/src/asyncio/coroutine/: README.md  async.py  cancel.py  future.py  multi_task.py  task.py  timeout.py
python/src/asyncio/event_loop/: README.md  get.py  run.py  task.py  terminate.py  thread.py
python/src/oslo/messaging/: README.md
src/automake/: README.md
src/automake/basis/: configure.ac
src/automake/basis/src/: main.cpp
src/automake/internationalization/: Makefile.am  autogen.sh
src/automake/internationalization/po/: LINGUAS  POTFILES.in
src/automake/internationalization/src/: Makefile.am  main.cpp
src/boost/asio/io_context/: main.cc
src/boost/asio/strand/: README.md  main.cc
src/boost/asio/threadpool/: CMakeLists.txt
src/boost/asio/timers/: README.md
src/boost/log/: CMakeLists.txt
src/boost/msm/basic/: main.cc
src/boost/msm/internal/: main.cc
src/boost/program_options/: README.md
src/glib/: README.md
src/glib/class/: README.md
src/glib/notify/: README.md  bird.c  main.c
src/glib/signal/: .gitignore  README.md  marshal.txt
src/gtk/menu/popup/: README.md
src/libvirt/: README.md
src/libvirt/dumpxml/: CMakeLists.txt  README.md
src/odb/basic/: CMakeLists.txt  main.cxx
src/poco/: README.md
src/poco/application/: CMakeLists.txt  Connection.h  GameServer.h  README.md  demo.cc
src/poco/byteorder/: CMakeLists.txt
src/poco/config/: config.ini  main.cc
src/poco/logger/: CMakeLists.txt  main.cc
src/poco/thread/: main.cc
src/poco/type/: README.md  main.cc
src/pugixml/: CMakeLists.txt  main.cc
src/rabbitmq/: README.md
src/rabbitmq/hello world/: README.md  consumer.cc  producer.cc
src/rabbitmq/helloworld/: CMakeLists.txt
src/rabbitmq/publish|subscribe/: consumer.cc  producer.cc
src/rabbitmq/routing/: README.md  consumer.cc
src/rabbitmq/rpc/: consumer.cc
src/rabbitmq/topics/: README.md  consumer.cc  producer.cc
src/rabbitmq/work queues/: README.md  consumer.cc  producer.cc
src/soci/: README.md
src/soci/async/: CMakeLists.txt
src/soci/basic/: main.cc
src/soci/object/: README.md  main.cc
src/soci/pool/: README.md  main.cc
src/soci/statements/: README.md
src/std/: README.md
src/std/cout/: README.md  main.cc
src/std/fstream/: main.cc
src/std/getopt_long/: main.cc
src/unix/epoll/: main.c
(+10 files in other folders)
