NULL =

bin_PROGRAMS = app
app_LDADD =

app_CPPFLAGS =           \
	$(NULL)

app_CXXFLAGS = -ggdb3 -Wall -MMD  -fpermissive -g
MAINTAINERCLEANFILES =

COMMON_LIBS =             \
	$(NULL)

COMMON_CPPFLAGS =         \
	$(NULL)

app_SOURCES =             \
    main.cpp              \
    $(NULL)

app_LDFLAGS =             \
	$(COMMON_LIBS)        \
	$(NULL)

app_CPPFLAGS +=           \
	$(COMMON_CPPFLAGS)    \
	$(NULL)

